refactor(special-models): convert ChunkInfoListMap and RenderableChunks to records